# token-miser

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md  SECURITY.md  config.enterprise.example.toml  config.example.toml
.github/workflows/: ci.yml
.local/: README.md
docs/: OVERVIEW.md  README.md
docs/architecture/: ESCALATION.md  FASTCONTEXT-EXPLORE.md  MODEL-DISCOVERY.md  MODEL-SELECTION.md  ROUTING-ARCHITECTURE.md  SEMANTIC-ROUTING.md
docs/operations/: MEASUREMENT-RUNBOOK.md  TELEMETRY.md
scripts/: test-public-surface-guard.sh  verify-no-private-references.sh
src/: anthropic_stream.rs  cluster.rs  config.rs  discovery.rs  intent.rs  main.rs  models.rs  proxy.rs  router.rs  semantic.rs  telemetry.rs
src/explore/: client.rs  expand.rs  mod.rs  tools.rs
